--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,12 @@
     <title>Home</title>
 </head>
 <body>
-    
+    </h1>Title<h1></h1>
+    <p>Test</p>
+    <form method='POST'>
+        <p><input type='text' name='start'/></p>
+        <p><input type='text' name='finish'/></p>
+        <p><input type='submit' value='submit'/></p>
+    </form>
 </body>
 </html>
