--- a/templates/index.html
+++ b/templates/index.html
@@ -3,15 +3,219 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Directions</title>
 </head>
 <body>
-    </h1>Title<h1></h1>
-    <p>Test</p>
-    <form method='POST'>
-        <p><input type='text' name='start'/></p>
-        <p><input type='text' name='finish'/></p>
-        <p><input type='submit' value='submit'/></p>
+    <form method="post">
+        <p>Welcome to Babson!</p>
+    
+        <label for="starting">Choose Your Starting Point:</label>
+        <select id="location_name">
+            <option value="babson_hall">Babson Hall</option>
+            <option value="babson_lot">Babson Lot</option>
+            <option value="becc">Babson Executive Conference Center</option>
+            <option value="becc_lot">BECC Garage</option>
+            <option value="blank">Arthur M. Blank Center</option> 
+            <option value="brac">Babson Recreation and Athletics Complex</option> 
+            <option value="bryant">Bryant Hall</option> 
+            <option value="bryant_lot">Bryant Lot</option>
+            <option value="bsc">Boston Sports Club</option>
+            <option value="canfield">Canfield Hall"</option>
+            <option value="central_services">Central Services</option>
+            <option value="chapel">Glavin Family Chapel</option> 
+            <option value="coleman">Coleman Hall</option> 
+            <option value="coleman_lot">Coleman Lot</option>
+            <option value="commons">Babson Commons</option>
+            <option value="cruikshank">William Cruickshank Alumni Hall</option>
+            <option value="forest">Forest Hall</option>
+            <option value="forest_annex">Forest Hall (Annex)</option>
+            <option value="forest_lot">Forest Lot</option> 
+            <option value="foundry">the Weissman Foundry</option> 
+            <option value="foundry_lot">Foundry Lot</option> 
+            <option value="gerber">Gerber Hall</option>
+            <option value="globe">the Globe</option>
+            <option value="hartwell_rogers_field">Hartwell Rogers Field"</option>
+            <option value="hollister">Hollister Hall</option>
+            <option value="hollister_lot">Hollister Lot</option> 
+            <option value="horn">Horn Library</option> 
+            <option value="horn_cpu">Horn Library Computer Center</option>
+            <option value="innovation">The Innovation Center</option> 
+            <option value="isbrandtsen_field">Isbrandtsen Field</option>
+            <option value="keith">Keith Hall</option>
+            <option value="knight">Knight Auditorium</option>
+            <option value="knight_lot">Knight Lot</option>
+            <option value="kriebel">Kriebel Hall</option> 
+            <option value="luksic">Luksic Hall</option> 
+            <option value="macdowell_field">MacDowell Field</option> 
+            <option value="malloy">Malloy Hall</option>
+            <option value="mandell">Mandell Family Hall</option>
+            <option value="manor_central">Park Manor Central"</option>
+            <option value="manor_north">Park Manor North</option>
+            <option value="manor_quad">Park Manor Quad</option> 
+            <option value="manor_south">Park Manor South</option> 
+            <option value="manor_west">Park Manor West</option>
+            <option value="mattos">Mattos Hall</option>
+            <option value="mccullough">McCullough Hall</option>
+            <option value="millea">Millea Hall</option>
+            <option value="mustard">Mustard Hall (Admissions</option>
+            <option value="nichols">Nichols Building</option> 
+            <option value="nichols_lot">Nichols Lot</option> 
+            <option value="olin">Olin Hall</option> 
+            <option value="olin_lot">Olin Lot</option>
+            <option value="path_bryant_way">Bryant Way</option> 
+            <option value="path_fields_bryant">the path from the fields to Bryant Way</option>
+            <option value="path_fields_seating">fields' spectator seating</option> 
+            <option value="path_fields_side">the path behind the softball field</option>
+            <option value="path_keith_canfield">the path between Kieth Hall and Canfield Hall</option>
+            <option value="path_mustard_blank">the path between the Blank Center and Mustard Hall</option> 
+            <option value="path_olin_knight">the path between Olin Hall and Knight Auditorium</option>
+            <option value="path_pietz_mccullough">the path between Pietz Hall and McCullough Hall</option>
+            <option value="path_reynolds_canfield">the path between Reynolds Center and Canfield Hall</option>
+            <option value="path_sullivan">Sullivan Road</option> 
+            <option value="path_tomasso_lawn">the Tomasso lawn</option>
+            <option value="path_vw_hill_bottom">the bottom of Van Winkle Hill</option>
+            <option value="path_vw_hill_top">the top of Van Winkle Hill</option>
+            <option value="path_webster_stairs">the stairs outside the Webster Center</option>
+            <option value="pietz">Pietz Hall</option> 
+            <option value="post_office">Post Office (USPS)</option>
+            <option value="public_safety">Public Safety</option>
+            <option value="putney">Putney Hall</option>
+            <option value="reynolds">Reynolds Campus Center</option>
+            <option value="rogers">Rogers Pub</option>
+            <option value="skating_lot">Skating Lot</option>
+            <option value="skating_rink">Skating Center</option>
+            <option value="softball_field">Alumni Softball Field</option>
+            <option value="sorenson">Sorenson</option>
+            <option value="sullivan">Sullivan Building</option>
+            <option value="sullivan_lot">Sullivan Lot</option>
+            <option value="tennis_court">Tennis Courts</option>
+            <option value="tomasso">Tomasso Hall</option>
+            <option value="trim_dining">Trim Dining Hall</option> 
+            <option value="trim_lot">Trim Parking Lot</option> 
+            <option value="van_winkle">Van Winkle Hall</option>
+            <option value="webster">Webster Center</option>
+            <option value="webster_lot">Webster Lot</option>
+            <option value="westgate">Westage Hall</option>
+            <option value="woodland_1">Woodland Building 1</option>
+            <option value="woodland_10">Woodland Building 10</option>
+            <option value="woodland_2">Woodland Building 2</option>
+            <option value="woodland_2a">Woodland Building 2A</option>
+            <option value="woodland_3">Woodland Building 3</option>
+            <option value="woodland_4">Woodland Building 4</option>
+            <option value="woodland_5">Woodland Building 5</option>
+            <option value="woodland_6">Woodland Building 6</option>
+            <option value="woodland_7">Woodland Building 7</option>
+            <option value="woodland_8">Woodland Building 8</option>
+            <option value="woodland_9">Woodland Building 9</option>
+            <option value="woodland_lot">Woodland Lot</option>
+            <option value="woodside">Woodside Hall</option>
+            <option value="woodside_lot">Woodside Lot</option>
+        </select>
+        
+        <br><p>
+
+        <label for="destination">Choose Your Destination:</label>
+        <select id="location_name">
+            <option value="babson_hall">Babson Hall</option>
+            <option value="babson_lot">Babson Lot</option>
+            <option value="becc">Babson Executive Conference Center</option>
+            <option value="becc_lot">BECC Garage</option>
+            <option value="blank">Arthur M. Blank Center</option> 
+            <option value="brac">Babson Recreation and Athletics Complex</option> 
+            <option value="bryant">Bryant Hall</option> 
+            <option value="bryant_lot">Bryant Lot</option>
+            <option value="bsc">Boston Sports Club</option>
+            <option value="canfield">Canfield Hall"</option>
+            <option value="central_services">Central Services</option>
+            <option value="chapel">Glavin Family Chapel</option> 
+            <option value="coleman">Coleman Hall</option> 
+            <option value="coleman_lot">Coleman Lot</option>
+            <option value="commons">Babson Commons</option>
+            <option value="cruikshank">William Cruickshank Alumni Hall</option>
+            <option value="forest">Forest Hall</option>
+            <option value="forest_annex">Forest Hall (Annex)</option>
+            <option value="forest_lot">Forest Lot</option> 
+            <option value="foundry">the Weissman Foundry</option> 
+            <option value="foundry_lot">Foundry Lot</option> 
+            <option value="gerber">Gerber Hall</option>
+            <option value="globe">the Globe</option>
+            <option value="hartwell_rogers_field">Hartwell Rogers Field"</option>
+            <option value="hollister">Hollister Hall</option>
+            <option value="hollister_lot">Hollister Lot</option> 
+            <option value="horn">Horn Library</option> 
+            <option value="horn_cpu">Horn Library Computer Center</option>
+            <option value="innovation">The Innovation Center</option> 
+            <option value="isbrandtsen_field">Isbrandtsen Field</option>
+            <option value="keith">Keith Hall</option>
+            <option value="knight">Knight Auditorium</option>
+            <option value="knight_lot">Knight Lot</option>
+            <option value="kriebel">Kriebel Hall</option> 
+            <option value="luksic">Luksic Hall</option> 
+            <option value="macdowell_field">MacDowell Field</option> 
+            <option value="malloy">Malloy Hall</option>
+            <option value="mandell">Mandell Family Hall</option>
+            <option value="manor_central">Park Manor Central"</option>
+            <option value="manor_north">Park Manor North</option>
+            <option value="manor_quad">Park Manor Quad</option> 
+            <option value="manor_south">Park Manor South</option> 
+            <option value="manor_west">Park Manor West</option>
+            <option value="mattos">Mattos Hall</option>
+            <option value="mccullough">McCullough Hall</option>
+            <option value="millea">Millea Hall</option>
+            <option value="mustard">Mustard Hall (Admissions</option>
+            <option value="nichols">Nichols Building</option> 
+            <option value="nichols_lot">Nichols Lot</option> 
+            <option value="olin">Olin Hall</option> 
+            <option value="olin_lot">Olin Lot</option>
+            <option value="path_bryant_way">Bryant Way</option> 
+            <option value="path_fields_bryant">the path from the fields to Bryant Way</option>
+            <option value="path_fields_seating">fields' spectator seating</option> 
+            <option value="path_fields_side">the path behind the softball field</option>
+            <option value="path_keith_canfield">the path between Kieth Hall and Canfield Hall</option>
+            <option value="path_mustard_blank">the path between the Blank Center and Mustard Hall</option> 
+            <option value="path_olin_knight">the path between Olin Hall and Knight Auditorium</option>
+            <option value="path_pietz_mccullough">the path between Pietz Hall and McCullough Hall</option>
+            <option value="path_reynolds_canfield">the path between Reynolds Center and Canfield Hall</option>
+            <option value="path_sullivan">Sullivan Road</option> 
+            <option value="path_tomasso_lawn">the Tomasso lawn</option>
+            <option value="path_vw_hill_bottom">the bottom of Van Winkle Hill</option>
+            <option value="path_vw_hill_top">the top of Van Winkle Hill</option>
+            <option value="path_webster_stairs">the stairs outside the Webster Center</option>
+            <option value="pietz">Pietz Hall</option> 
+            <option value="post_office">Post Office (USPS)</option>
+            <option value="public_safety">Public Safety</option>
+            <option value="putney">Putney Hall</option>
+            <option value="reynolds">Reynolds Campus Center</option>
+            <option value="rogers">Rogers Pub</option>
+            <option value="skating_lot">Skating Lot</option>
+            <option value="skating_rink">Skating Center</option>
+            <option value="softball_field">Alumni Softball Field</option>
+            <option value="sorenson">Sorenson</option>
+            <option value="sullivan">Sullivan Building</option>
+            <option value="sullivan_lot">Sullivan Lot</option>
+            <option value="tennis_court">Tennis Courts</option>
+            <option value="tomasso">Tomasso Hall</option>
+            <option value="trim_dining">Trim Dining Hall</option> 
+            <option value="trim_lot">Trim Parking Lot</option> 
+            <option value="van_winkle">Van Winkle Hall</option>
+            <option value="webster">Webster Center</option>
+            <option value="webster_lot">Webster Lot</option>
+            <option value="westgate">Westage Hall</option>
+            <option value="woodland_1">Woodland Building 1</option>
+            <option value="woodland_10">Woodland Building 10</option>
+            <option value="woodland_2">Woodland Building 2</option>
+            <option value="woodland_2a">Woodland Building 2A</option>
+            <option value="woodland_3">Woodland Building 3</option>
+            <option value="woodland_4">Woodland Building 4</option>
+            <option value="woodland_5">Woodland Building 5</option>
+            <option value="woodland_6">Woodland Building 6</option>
+            <option value="woodland_7">Woodland Building 7</option>
+            <option value="woodland_8">Woodland Building 8</option>
+            <option value="woodland_9">Woodland Building 9</option>
+            <option value="woodland_lot">Woodland Lot</option>
+            <option value="woodside">Woodside Hall</option>
+            <option value="woodside_lot">Woodside Lot</option>                   
+        </select>
     </form>
 </body>
 </html>
