--- a/templates/result.html
+++ b/templates/result.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error</title>
+    <title>Result</title>
 </head>
 <body>
-    </h1>Title<h1></h1>
-    <p>Test</p>   
+    <p>	Follow the direction: {{}}. </p>
 </body>
 </html>
