--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
     <title>Home</title>
 </head>
 <body>
-    </h1>Title<h1></h1>
-    <p>Test</p>
+    </h1>Welcome to BaboDirect<h1></h1>
+    <p>Please select where you want to go from and to</p>
     <form method='POST' id = "locations">
         <label for="start">Start:</label>
         <select id="start" name="start" form="locations">
