--- a/templates/directions.html
+++ b/templates/directions.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Result</title>
+    <title>Directions</title>
 </head>
 <body>
-    <p>	Follow the direction: {{text}}. </p>
+    <p>	Follow the directions: {{text}} </p>
 </body>
 </html>
