--- a/templates/directions.html
+++ b/templates/directions.html
@@ -6,7 +6,7 @@
     <title>Directions</title>
 </head>
 <body>
-    <p> The journey between {{start}} and {{finish}} should take around {{time}} minutes </p>
+    <p> This journey should take around {{time}} minutes </p>
     <p>	Follow these directions: </p>
     <p>
         <ul>
