--- a/templates/directions.html
+++ b/templates/directions.html
@@ -6,7 +6,7 @@
     <title>Directions</title>
 </head>
 <body>
-    <p> This journey should take around {{time}} minutes </p>
+    <p> This journey should take around {{time}} minutes. </p>
     <p>	Follow these directions: </p>
     <p>
         <ul>
@@ -15,5 +15,6 @@
         {% endfor %}  
         </ul>
     </p>
+    <p>	Thank you for using BaboDirect! </p>
 </body>
 </html>
