--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,8 @@
     <title>Home</title>
 </head>
 <body>
-    </h1>Welcome to BaboDirect<h1></h1>
+    <p><image src="static/images/logo.png" alt="BaboDirect Logo" height = "200" width = "200"></p>
+    </h1>Welcome to BaboDirect!<h1></h1>
     <p>Please select where you want to go from and to:</p>
     <p>    
         <form method='POST' id = "locations">
