--- a/templates/directions.html
+++ b/templates/directions.html
@@ -6,6 +6,7 @@
     <title>Directions</title>
 </head>
 <body>
+    <p><image src="static/images/logo.png" alt="BaboDirect Logo" height = "200" width = "200"></p>
     <p> This journey should take around {{time}} minutes. </p>
     <p>	Follow these directions: </p>
     <p>
