--- a/templates/error.html
+++ b/templates/error.html
@@ -6,6 +6,7 @@
     <title>Error</title>
 </head>
 <body>
+    <p><image src="static/images/logo.png" alt="BaboDirect Logo" height = "200" width = "200"></p>
     </h1>There was an error with your request<h1></h1>
     <p>Please try again</p>
     <p><a href="{{ url_for('index') }}">Try again</a></p>
