--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,7 @@
                 <option value="sullivan_lot">Sullivan Lot</option>
                 <option value="tennis_court">Tennis Courts</option>
                 <option value="tomasso">Tomasso Hall</option>
-                <option value="trim_dining">Trim Dining Hall</option> 
+                <option value="trim">Trim Dining Hall</option> 
                 <option value="trim_lot">Trim Parking Lot</option> 
                 <option value="van_winkle">Van Winkle Hall</option>
                 <option value="webster">Webster Center</option>
@@ -177,7 +177,7 @@
                 <option value="sullivan_lot">Sullivan Lot</option>
                 <option value="tennis_court">Tennis Courts</option>
                 <option value="tomasso">Tomasso Hall</option>
-                <option value="trim_dining">Trim Dining Hall</option> 
+                <option value="trim">Trim Dining Hall</option> 
                 <option value="trim_lot">Trim Parking Lot</option> 
                 <option value="van_winkle">Van Winkle Hall</option>
                 <option value="webster">Webster Center</option>
